logs/provpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/provpy'...
Listing './lib/python3.5/site-packages/provpy/model'...
Compiling './lib/python3.5/site-packages/provpy/model/core.py'...
***   File "./lib/python3.5/site-packages/provpy/model/core.py", line 70
    if prefix <> 'default':
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provpy/model/examples'...
Compiling './lib/python3.5/site-packages/provpy/model/examples/provpyexample_Account.py'...
***   File "./lib/python3.5/site-packages/provpy/model/examples/provpyexample_Account.py", line 60
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provpy/model/examples/provpyexample_Elements.py'...
***   File "./lib/python3.5/site-packages/provpy/model/examples/provpyexample_Elements.py", line 54
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provpy/model/examples/provpyexample_Literal.py'...
***   File "./lib/python3.5/site-packages/provpy/model/examples/provpyexample_Literal.py", line 46
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provpy/model/examples/provpyexample_Qname_Namespace.py'...
***   File "./lib/python3.5/site-packages/provpy/model/examples/provpyexample_Qname_Namespace.py", line 15
    print "the type of exuri is: %s" % type(exuri)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/provpy/model/examples/provpyexample_Relations.py'...
***   File "./lib/python3.5/site-packages/provpy/model/examples/provpyexample_Relations.py", line 57
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/provpy/model/test'...
Compiling './lib/python3.5/site-packages/provpy/model/test/testexample.py'...
***   File "./lib/python3.5/site-packages/provpy/model/test/testexample.py", line 80
    print testuri.name
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/provpy-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
